# Amazon-FAQ-Chatbot-

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: generated_faqs_groq.csv
faiss_index/: index.faiss  index.pkl
src/components/: generate_faqs.py  ingest_faqs.py  rag_chatbot.py
src/constants/: __init__.py
src/exception/: exception.py
src/logging/: logger.py
